--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,3 +1,8 @@
-# FROM node:16.14-alpine
-# WORKDIR /app-backend
-#  ...
+FROM node:16.14-alpine
+WORKDIR /app-backend
+COPY package* ./
+EXPOSE 3001
+RUN npm install
+COPY . .
+ENTRYPOINT ["npm", "run"]
+CMD ["start"]
